--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft Server Details</title>
+    <title>Educated SMP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,6 +12,22 @@
             padding: 0;
             background-color: #222;
             color: #fff;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+            position: relative; /* Add this */
+        }
+        .server-info {
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+        }
+        .server-icon {
+            margin-right: 20px;
         }
         .status-circle {
             display: inline-block;
@@ -29,15 +45,41 @@
         .server-details {
             margin-top: 20px;
         }
+        /* Add this */
+        .button-container {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+        }
+        .colorful-button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <h1>Minecraft Server Details</h1>
-    <div class="server-details" id="serverDetails">
-        <!-- Server details will be displayed here -->
+    <div class="container">
+
+        <div class="server-info" id="serverDetails">
+            <!-- Server details will be displayed here -->
+        </div>
+
+        <!-- Add this button container -->
+        <div class="button-container">
+            <button class="colorful-button" onclick="redirectToAnotherPage()">Players</button>
+        </div>
     </div>
 
     <script>
+        // Function to redirect to another page
+    function redirectToAnotherPage() {
+        window.location.href = 'players'; // Replace 'https://example.com' with the URL of the page you want to redirect to
+    }
+
         // Make an AJAX request to mcsrvstat API
         var request = new XMLHttpRequest();
         request.open('GET', 'https://api.mcsrvstat.us/3/N5.MCST.IO:25597', true);
@@ -66,18 +108,27 @@
             if (data.online) {
                 // Server is online
                 serverDetailsDiv.innerHTML = `
-                    <img src="${data.icon}" alt="Minecraft Server Icon" width="100">
-                    <h2>Server IP: ${data.ip}:${data.port}</h2>
-                    <h3>MOTD: ${data.motd.clean}</h3>
-                    <div class="status-circle online"></div>
-                    <p>Online</p>
+                    <div class="server-icon">
+                        <img src="${data.icon}" alt="Minecraft Server Icon" width="100">
+                    </div>
+                    <div class="server-details">
+                        <h3>MOTD: ${data.motd.clean}</h3>
+                        <h2>Server IP: ${data.ip}:${data.port}</h2>
+                        <div class="status-circle online"></div>
+                        <p>Online</p>
+                    </div>
                 `;
             } else {
                 // Server is offline
                 serverDetailsDiv.innerHTML = `
-                    <h2>Server IP: ${data.ip}:${data.port}</h2>
-                    <p>Offline</p>
-                    <div class="status-circle offline"></div>
+                    <div class="server-icon">
+                        <img src="${data.icon}" alt="Minecraft Server Icon" width="100">
+                    </div>
+                    <div class="server-details">
+                        <h2>Server IP: ${data.ip}:${data.port}</h2>
+                        <p>Offline</p>
+                        <div class="status-circle offline"></div>
+                    </div>
                 `;
             }
         }
