--- a/players.html
+++ b/players.html
@@ -18,7 +18,7 @@
 
     <script>
         // Replace with your actual server address
-        const serverAddress = "N5.MCST.IO:25597"; // Change this to your server address
+        const serverAddress = "Darkspirit.aternos.me:26976"; // Change this to your server address
 
         // Fetch player data from MCSrvStat API
         fetch(`https://api.mcsrvstat.us/3/${serverAddress}`)
