--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         // Make an AJAX request to mcsrvstat API
         var request = new XMLHttpRequest();
-        request.open('GET', 'https://api.mcsrvstat.us/3/N5.MCST.IO:25597', true);
+        request.open('GET', 'https://api.mcsrvstat.us/3/Darkspirit.aternos.me:26976', true);
 
         request.onload = function() {
             if (request.status >= 200 && request.status < 400) {
