--- a/bash.html
+++ b/bash.html
@@ -18,11 +18,11 @@
     if (isCurl) {
       content = 'This is the content for cURL';
     } else {
-      content = 'This is the content for web browsers';
+      content = '<p>This is the content for web browsers</p>';
     }
 
     // Update the content div with the appropriate content
-    document.getElementById('content').textContent = content;
+    document.getElementById('content').innerHTML = content;
   </script>
 </body>
 </html>
